--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "pixel",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
