--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.36.0",
     "framer-motion": "^10.16.4",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
