--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "framer-motion": "^10.16.4",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.16.0",
+    "react-tilt": "^1.0.2",
     "sass": "^1.68.0",
     "swiper": "^10.3.1"
   },
