--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-tilt": "^1.0.2",
+    "react-youtube": "^10.1.0",
     "sass": "^1.68.0",
     "swiper": "^10.3.1"
   },
